--- a/courses/basque-from-english/02-QuestionsGreetings/skills/02-greetings-2.yaml
+++ b/courses/basque-from-english/02-QuestionsGreetings/skills/02-greetings-2.yaml
@@ -136,7 +136,7 @@ Mini-dictionary:
     - tomorrow: bihar
     - until: arte
     - no: ez
-    - nothing: ez ezer
+    - nothing: ezer ez
     - good: ondo
     - night: gaua
     - later: gero
